20240131:會員|管理 登出

--- a/test.html
+++ b/test.html
@@ -5,8 +5,12 @@ abc=parseInt(test);
 
 def=Number(test);
 
-console.log(abc);
-console.log(def);
+console.log('the number =',test);
+console.log('-TYPE:',typeof test);
+console.log('parseInt->',abc);
+console.log('-TYPE:',typeof abc);
+console.log('Number->',def);
+console.log('-TYPE:',typeof def);
 
 
 </script>
